# Chemical-Visualiser

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE.txt  README.md
App/: CMakeLists.txt
App/Source/: AppLayer.cpp  AppLayer.h  Chemical.cpp  Chemical.h  Settings.cpp  Settings.h  WindowData.h  main.cpp
App/Source/ChemVis/: Chemical.cpp  Chemical.h  ChemicalList.cpp  ChemicalList.h  FetchThreadHandler.cpp  FetchThreadHandler.h  PubChem.cpp  PubChem.h
App/Source/Layers/: AppLayer.cpp  AppLayer.h  InterfaceLayer.cpp  InterfaceLayer.h  View2DLayer.cpp  View2DLayer.h  View3DLayer.cpp  View3DLayer.h
Chemical Visualiser/: 2DVisualiser.cpp  2DVisualiser.h  3DVisualiser.cpp  3DVisualiser.h  ArcBallCamera.cpp  ArcBallCamera.h  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  ChemicalDataCache.cpp  ChemicalDataCache.h  ChemicalVisualiser.aps  ChemicalVisualiser.rc  ChemicalVisualiser.sln  ChemicalVisualiser.vcxproj  ChemicalVisualiser.vcxproj.filters  EBO.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Settings.json  SettingsDefault.json  SettingsUI.cpp  SettingsUI.h  StartupScreen.cpp  StartupScreen.h  Texture.cpp  VAO.h  VBO.cpp  VBO.h  Viewport.cpp  Viewport.h  imgui.ini  resource.h
Chemical Visualiser/Chemical.cf7fd789/x64/Debug/: ChemicalVisualiser.exe.recipe  main.obj.enc  vc143.idb
Chemical Visualiser/Chemical.cf7fd789/x64/Debug/Chemical.cf7fd789.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChemicalVisualiser.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Chemical Visualiser/ChemicalData/: 65157.json  65157_conformers.json
Chemical Visualiser/ChemicalData/Cache/: data.json
Chemical Visualiser/ChemicalVis/: Atom.cpp  Atom.h  CameraControls.cpp  CameraControls.h  Chemical.cpp  Chemical.h  ChemicalInputHandling.cpp  ChemicalInputHandling.h  ChemicalWindow.cpp  ChemicalWindow.h  DataFetch.cpp  DrawChemical.cpp  DrawChemical.h  EditorWindow.cpp  EditorWindow.h  GUI.cpp  GUI.h  GlobalClass.cpp  GlobalClass.h  PubchemAccess.cpp  PubchemAccess.h  RenderOptions.cpp  RenderOptions.h  Settings.cpp  Settings.h  Settings.json  chemicalData.h
Chemical Visualiser/Libraries/include/assimp/: config.h.in
Chemical Visualiser/Libraries/include/glad/: glad.h
Chemical Visualiser/Libraries/lib/: glfw3.lib
Chemical Visualiser/Renderer/: Camera.cpp  Camera.h  DebugLine.cpp  DebugLine.h  EBO.cpp  EBO.h  Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c
Chemical Visualiser/Shaders/: DebugLine.frag  DebugLine.vert  Startup.frag  Startup.vert  atom.frag  atom.vert  atom2D.frag  atom3D.frag  axisLines.frag  axisLines.vert  bond.frag  bond.vert  default.frag  default.vert  defaultInstanced.vert  gridLines.frag
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Event.h  Json.h  Layer.cpp  Layer.h  Window.cpp  Window.h
Core/Source/Core/Cameras/: ArcBall.cpp  ArcBall.h
Core/Source/Core/Http/: HttpClient.cpp  HttpClient.h
Core/Source/Core/Renderer/: Color.h  Model.cpp  Model.h  Shape.cpp  Shape.h  Text.cpp  Text.h
Core/Source/Core/Utils/: Inputs.h  String.cpp  String.h
